fix image width for examples on mobile

--- a/BForms.Docs/Content/Stylesheets/site.scss
+++ b/BForms.Docs/Content/Stylesheets/site.scss
@@ -293,6 +293,9 @@ h1 {
 		margin-bottom: -1px;
 		&.bs-img-example {
 			background: #fff;
+			img {
+				max-width: 100%;
+			}
 		}
 	}
 	.highlight {
